# serverless-offline

./: .babel.config.js  .editorconfig  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .gitignore  .huskyrc.js  .lintstagedrc  .mocharc.cjs  .npmignore  .npmignore   .prettierignore  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  babel.config.js  commitlint.config.js  createVelocityContext.js  index.js  jest.config.js  jest.config.units.js  package-lock.json  package.json  prettier.config.cjs  prettier.config.js  rollup.config.js  serverless-offline-6.8.0.tgz  test.js  try.js  tsconfig.json  upcoming_README.md
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
examples/: .eslintrc.cjs  .eslintrc.js
examples/lambda-rust-invoke/: Cargo.toml  package-lock.json  package.json  serverless.yml
manual_test/: README.md  handler.js  invokeAll.sh  package.json  serverless.yml
manual_test_nodejs/: README.md  handler.js  package-lock.json  package.json  serverless.yml  subprocess.js
manual_test_python/: package-lock.json  package.json  serverless.yml
manual_test_ruby/: README.md  package-lock.json  package.json  serverless.yml
manual_test_websocket/: README.md  handler.js  package-lock.json  package.json  serverless.yml
next_version/: package.json
scripts/: modifyBundle.js
src/: AbstractHttpServer.js  ApiGateway.js  ApiGatewayWebSocket.js  Endpoint.js  LambdaContext.js  LambdaFunction.js  LambdaFunctionPool.js  LambdaIntegrationEvent.js  LambdaProxyEvent.js  Offline.js  debugLog.js  (+52 more)
(+1508 files in other folders)
